--- a/step08/.project
+++ b/step08/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>homeWork</name>
+	<name>step08</name>
 	<comment></comment>
 	<projects>
 	</projects>
